# mincaml-rs

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
codegen_wasm/: Cargo.toml
codegen_wasm/src/: constant.rs  expr.rs  function.rs  index.rs  lib.rs  program.rs  ty.rs
data_structure/: Cargo.toml
data_structure/src/: arena.rs  graph.rs  index.rs  interning.rs  lib.rs  set_like_vec.rs
data_structure/src/graph/: traversal.rs
data_structure/src/index/: vec.rs
driver/: Cargo.toml  messages.ftl
driver/src/: lib.rs
driver/tests/: parser.rs
errors/: Cargo.toml
errors/src/: annotate_snippets_emitter.rs  context.rs  diagnostic_impls.rs  lib.rs  translation.rs
ir_asm_virtual/: Cargo.toml
ir_asm_virtual/src/: builder.rs  context.rs  graph.rs  lib.rs  lowering.rs  pretty.rs  syntax.rs  visit.rs
ir_asm_virtual/src/graph/: back_edges.rs
ir_asm_virtual/src/lowering/: expr.rs  function.rs
ir_asm_virtual/src/lowering/expr/: label.rs
ir_asm_virtual_passes/: Cargo.toml
ir_asm_virtual_passes/src/: lib.rs  remove_unit.rs  remove_unused.rs
ir_closure/: Cargo.toml
ir_closure/src/: context.rs  lib.rs  lowering.rs  syntax.rs  visit.rs
ir_knorm/: Cargo.toml
ir_knorm/src/: alpha_rename.rs  context.rs  lib.rs  lowering.rs  syntax.rs  visit.rs
ir_knorm_passes/: Cargo.toml
ir_knorm_passes/src/: alpha_rename.rs  beta_convert.rs  constant_fold.rs  eliminate_unused.rs  inlining.rs  let_flatten.rs  lib.rs
ir_typed_ast/: Cargo.toml
ir_typed_ast/src/: lib.rs  pretty.rs  syntax.rs  visit.rs
ir_typed_ast/src/syntax/: mli.rs
macros/: Cargo.toml
macros/src/: diagnostic.rs  diagnostics.rs  doc.rs  fluent.rs  lib.rs  util.rs
macros/src/diagnostic/: builder.rs  error.rs  utils.rs
macros/src/diagnostics/: derive_builder.rs  error.rs  utils.rs
macros/src/diagnostics/derive_builder/: diagnostic.rs  subdiagnostic.rs
main/: Cargo.toml
main/src/: compiler.rs  context.rs  main.rs
main/tests/: parser.rs
middleware/: Cargo.toml
middleware/src/: lib.rs  session.rs
parser/: Cargo.toml  build.rs
parser/src/: context.rs  lalrpop.rs  lexer.rs  lib.rs  mincaml.lalrpop  parser.rs  peg.rs  plex.rs
parser/src/lexer/: plex.rs
parser/src/parser/: .gitignore  lalrpop.rs  mincaml.lalrpop  mli.lalrpop  mli.rs  peg.rs
runtime/: Cargo.toml
runtime/src/: intrinsic.rs  lib.rs  main.rs  mini_ml_runtime.rs
session/: Cargo.toml
session/src/: lib.rs
sourcemap/: Cargo.toml
sourcemap/src/: lib.rs
syntax/: Cargo.toml
syntax/src/: lib.rs  mli.rs  prettify.rs  pretty.rs
tests/: adder.ml  adder2.ml  cls-bug.ml  cls-bug2.ml  cls-rec.ml  float.ml  if-call.ml  if-nested.ml  if.ml  inprod-loop.ml  inprod-rec.ml  inprod.ml  matmul-flat.ml  matmul.ml  pervasives.mli  print.ml  shuffle.ml  sum-tail.ml  sum.ml
ty/: Cargo.toml
ty/src/: context.rs  lib.rs
typing/: Cargo.toml  messages.ftl
typing/src/: decide_ty_edsl.rs  error.rs  lib.rs  name_res.rs  ty_var_subst.rs  typeck.rs  unify.rs
