[workspace]
members = [
  "main",
  "syntax",
  "parser",
  "sourcemap",
  "ty",
  "typing",
  "ir_typed_ast",
  "ir_knorm",
  "ir_closure",
  "ir_asm_virtual",
  "ir_knorm_passes",
  "ir_asm_virtual_passes",
  "data_structure",
  "middleware",
  "codegen_wasm",
  "runtime",
  "macros",
  "errors",
  "session",
  "driver",
]
resolver = "2"

default-members = ["main"]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["s-ylide <71720482+s-ylide@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
bitvec = "1.0.1"
typed-arena = "2.0.2"
cfg-if = "1.0.0"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
rustc-hash = "2.0.0"
clap = { version = "4.5.18", features = ["derive"] }
wasm-encoder = "0.217.0"
wasmtime = "25.0.1"
wasi-common = "25.0.1"
annotate-snippets = "0.11.4"
fluent-syntax = "0.11.1"
fluent-bundle = "0.15.3"
anstream = "0.6.18"
indexmap = { version = "2.6.0", features = ["std"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }

syntax = { path = "./syntax" }
parser = { path = "./parser" }
sourcemap = { path = "./sourcemap" }
ty = { path = "./ty" }
typing = { path = "./typing" }
ir_typed_ast = { path = "./ir_typed_ast" }
ir_knorm = { path = "./ir_knorm" }
ir_closure = { path = "./ir_closure" }
ir_asm_virtual = { path = "./ir_asm_virtual" }
ir_knorm_passes = { path = "./ir_knorm_passes" }
ir_asm_virtual_passes = { path = "./ir_asm_virtual_passes" }
data_structure = { path = "./data_structure" }
middleware = { path = "./middleware" }
codegen_wasm = { path = "./codegen_wasm" }
macros.path = "./macros"
errors.path = "./errors"
session.path = "./session"
driver.path = "./driver"
