[workspace]
members = [
  "main",
  "syntax",
  "parser",
  "sourcemap",
  "ty",
  "typing",
  "ir_typed_ast",
  "ir_knorm",
  "ir_closure",
  "ir_asm_virtual",
  "ir_knorm_passes",
  "ir_asm_virtual_passes",
  "data_structure",
  "middleware",
  "codegen_wasm",
  "runtime",
]
resolver = "2"

default-members = ["main"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["s-ylide <71720482+s-ylide@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
bitvec = "1.0.1"
typed-arena = "2.0.2"
cfg-if = "1.0.0"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
rustc-hash = "2.0.0"
clap = { version = "4.5.18", features = ["derive"] }
wasm-encoder = "0.217.0"
wasmtime = "25.0.3"
wasi-common = "25.0.1"
indexmap = "2.6.0"

syntax = { path = "./syntax" }
parser = { path = "./parser" }
sourcemap = { path = "./sourcemap" }
ty = { path = "./ty" }
typing = { path = "./typing" }
ir_typed_ast = { path = "./ir_typed_ast" }
ir_knorm = { path = "./ir_knorm" }
ir_closure = { path = "./ir_closure" }
ir_asm_virtual = { path = "./ir_asm_virtual" }
ir_knorm_passes = { path = "./ir_knorm_passes" }
ir_asm_virtual_passes = { path = "./ir_asm_virtual_passes" }
data_structure = { path = "./data_structure" }
middleware = { path = "./middleware" }
codegen_wasm = { path = "./codegen_wasm" }
