[package]
name = "driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
parser.workspace = true
sourcemap.workspace = true
syntax.workspace = true
ty.workspace = true
typing.workspace = true
ir_typed_ast.workspace = true
ir_knorm.workspace = true
ir_closure.workspace = true
codegen_wasm.workspace = true
ir_asm_virtual.workspace = true
middleware.workspace = true
session.workspace = true
errors.workspace = true
macros.workspace = true
