[package]
name = "macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
annotate-snippets.workspace = true
fluent-syntax.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true
