[package]
name = "main"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

parser.workspace = true
sourcemap.workspace = true
