[package]
name = "main"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true

data_structure.workspace = true
parser.workspace = true
sourcemap.workspace = true
syntax.workspace = true
ty.workspace = true
typing.workspace = true
ir_typed_ast.workspace = true
ir_knorm.workspace = true
ir_closure.workspace = true
middleware.workspace = true
