[package]
name = "middleware"
version.workspace = true
edition.workspace = true

[dependencies]
rustc-hash.workspace = true
data_structure.workspace = true
session.workspace = true
parser.workspace = true
sourcemap.workspace = true
syntax.workspace = true
ty.workspace = true
typing.workspace = true
ir_typed_ast.workspace = true
ir_knorm.workspace = true
ir_closure.workspace = true
ir_asm_virtual.workspace = true
