[package]
name = "parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["plex", "peg"]

[dependencies]
plex = { version = "0.2.5", optional = true }
peg = { version = "0.8.1", optional = true }
thiserror.workspace = true
syntax.workspace = true
sourcemap.workspace = true
