[package]
name = "parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["plex", "lalrpops"]
lalrpops = ["lalrpop", "lalrpop-util"]

[build-dependencies]
lalrpop = { version = "0.20.0", optional = true }

[dependencies]
plex = { version = "0.2.5", optional = true }
peg = { version = "0.8.1", optional = true }
lalrpop-util = { version = "0.20.0", optional = true }
bumpalo.workspace = true
thiserror.workspace = true
syntax.workspace = true
sourcemap.workspace = true
