[package]
name = "parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["plex", "lalrpop"]
lalrpop = ["dep:lalrpop", "dep:lalrpop-util"]

[build-dependencies]
lalrpop = { version = "0.21.0", optional = true }

[dependencies]
plex = { version = "0.3.1", optional = true }
peg = { version = "0.8.4", optional = true }
lalrpop-util = { version = "0.21.0", optional = true }
thiserror.workspace = true

data_structure.workspace = true
syntax.workspace = true
sourcemap.workspace = true
