[package]
name = "typing"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structure.workspace = true

syntax.workspace = true
ty.workspace = true
sourcemap.workspace = true
ir_typed_ast.workspace = true

errors.workspace = true
macros.workspace = true
